test/langtools/tools/javac/enum/LocalEnum.out
LocalEnum.java:12:9: compiler.err.local.enum
1 error
